# morphology_bot

./: .env.example  Cargo.toml  ai_helper.rs  declension.rs  main.rs
src/: main.rs
src/quiz/: ai_helper.rs  declension.rs  mod.rs  parts.rs  stress.rs
